--- a/css/reset.css
+++ b/css/reset.css
@@ -36,7 +36,7 @@ body {
     width: 8px;
     height: 10px;
 }
-  
+
 ::-webkit-scrollbar-track {
     background: rgba(255, 255, 255, .2);
 }
@@ -107,9 +107,14 @@ li {
     font-weight: 600;
     margin-bottom: 15px;
     overflow: hidden;
-    width: 100%;
+    width: max-content;
+    max-width: 100%;
     height: 30px;
     line-height: 30px;
+}
+
+li:hover {
+    font-size: 1.3em;
 }
 
 #links {
@@ -186,7 +191,6 @@ main {
     height: auto;
     width: 100%;
 }
-
 
 /*-FOOTER--------------------------------------*/
 
