--- a/css/reset.css
+++ b/css/reset.css
@@ -10,7 +10,7 @@ ul, ol, a {
     text-decoration: none;
     list-style: none;
     color: rgb(30,30,30);
-    font-family: 'PT Sans Narrow', Arial, Helvetica, sans-serif;
+    font-family: 'PT Sans Narrow', Helvetica, sans-serif;
 }
 
 body {
@@ -23,6 +23,9 @@ body {
     overflow-y: scroll;
     scroll-behavior: smooth;
     scroll-snap-type: y mandatory;
+    border-left: 1px solid rgba(30, 30, 30, .2);
+    border-right: 1px solid rgba(30, 30, 30, .2);
+
 }
 
 /*Scrollbar----------------------------------*/
@@ -59,7 +62,7 @@ header {
     position: relative;
     z-index: 1000;
     position: fixed;
-    width: 250px;
+    width: 252px;
     min-height: auto;
     height: 100vh;
     display: flex;
@@ -67,7 +70,7 @@ header {
     justify-content: space-between;
     padding: 25px 0 0 25px;
     background-color: rgb(250, 250, 250);
-    box-shadow: 0 0 5px rgba(30, 30, 30, .5);
+    box-shadow: 3px 0 5px rgba(30, 30, 30, .2);
     overflow: auto;
     font-size: 1.05em;
     font-weight: 400;
