--- a/css/style.css
+++ b/css/style.css
@@ -221,6 +221,7 @@
     flex-wrap: wrap;
     width: calc(97vw - 360px);
     padding-bottom: 40px;
+
 }
 
 .projet {
@@ -400,10 +401,9 @@ main .le-projet div p span {
 
 #contact {
     height: max-content;
+    min-height: 100vh - 69px;
     display: flex;
     flex-direction: column;
-    min-height: calc(100vh - 66px);
-    height: max-content;
     width: 100%;
     padding-left: 300px;
 }
@@ -418,7 +418,7 @@ main .le-projet div p span {
 .bloc-info {
     display: flex;
     justify-content: space-between;
-    width: 94%;
+    width: 85%;
     padding-top: 35px;
 }
 
@@ -438,7 +438,10 @@ main .le-projet div p span {
 iframe {
     height: 400px;
     width: 40vw;
+    min-width: 320px;
+    max-width: 800px;
     border: 0;
+    margin-top: 30px;
 }
 
 .info section p {
