--- a/css/style.css
+++ b/css/style.css
@@ -88,114 +88,9 @@
     }
 }
 
-/*-AGENCE-------------------------------------------*/
-
-.description {
-    display: flex;
-    flex-direction: column;
-    min-height: calc(100vh - 66px);
-    width: 90%;
-    padding-left: 300px;
-}
-
-.description section {
-    min-height: 35vh;
-    max-height: min-content;
-    min-width: 310px;
-}
-
-.description section h2, .description section h1 {
-    display: block;
-    width: max-content;
-    margin: 22px 0;
-    font-size: 3em;
-}
-
-.description section p {
-    display: block;
-    text-align: justify;
-    width: 95%;
-    line-height: 1.5em;
-    margin-bottom: 25px;
-    font-size: 1.1em;
-}
-
-/*-AGENCE-------------------------------------------*/
-.agence {
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
-    width: 85%;
-    padding-left: 300px;
-}
-
-.agence section {
-    min-height: 35vh;
-    max-height: min-content;
-    min-width: 310px;
-}
-
-.agence section h2 {
-    display: block;
-    width: max-content;
-    margin: 22px 0;
-    font-size: 3em;
-}
-
-.agence section p {
-    display: block;
-    text-align: justify;
-    width: 95%;
-    line-height: 1.5em;
-    margin-bottom: 25px;
-    font-size: 1.1em;
-}
-
-.agence .employees {
-    height: auto;
-    width: 95%;
-    min-width: 480px;
-    display: flex;
-    /* justify-content: space-between; */
-    align-items: flex-start;
-    flex-wrap: wrap;
-    flex-shrink: 1;
-    margin-bottom: 20px;
-}
-
-.profil {
-    padding: 20px;
-    background-color: whitesmoke;
-    overflow: hidden;
-    width: 220px;
-    min-width: 200px;
-    height: 350px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    box-shadow: 0 0 5px 2px rgba(30, 30, 30, .1);
-    margin: 0 25px 15px 0;
-}
-
-.profil img {
-    height: 60%;
-    width: auto;
-    object-fit: cover;
-    object-position: center;
-    box-shadow: 0 0 5px 1px rgba(30, 30, 30, .1);
-}
-
-.profil h3 {
-    margin: 10px 0;
-}
-
-.profil div {
-    width: 100%;
-}
-
 /*-PROJET-SCROLL------------------------------------------*/
 
-#projets {
+/* #projets {
     position: relative;
     height: max-content;
     display: flex;
@@ -263,216 +158,4 @@
 
 .projet a:hover {
     opacity: 1;
-}
-
-/*-LE-PROJET------------------------------------*/
-
-#tri {
-    height: max-content;
-    width: calc(97vw - 360px);
-    margin-bottom: 40px;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-#tri button {
-    cursor: pointer;
-    font-size: 1.2em;
-    font-family: 'PT Sans Narrow', Arial, Helvetica, sans-serif;
-    border: 1px solid #333333;
-    font-weight: 500;
-    background-color: #FFFFFF;
-    height: max-content;
-    width: max-content;
-    min-width: max-content;
-    padding: 10px 15px;
-    border-radius: 2px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 12px;
-}
-
-#tri button:first-child {
-    background-color: #333333;
-    color: white;
-}
-
-#tri button:active {
-    background-color: #333333;
-    color: white;
-}
-
-.le-projet {
-    padding-left: 500px;
-    padding-right: 50px;
-    width: max-content;
-    max-width: 100vw;
-}
-
-main .le-projet h1 {
-    width: max-content;
-    padding-top: 22px;
-    margin-bottom: 22px;
-    font-size: 3em;
-}
-
-main .le-projet .bloc-projet-description {
-    display: flex;
-    flex-wrap: wrap;
-    font-size: 1.25em;
-    height: max-content;
-}
-
-main .le-projet .bloc-projet-description .projet-info {
-    min-width: max-content;
-    height: max-content;
-    margin-right: 100px;
-}
-
-main .le-projet .bloc-projet-description .la-description {
-    width: max-content;
-    max-width: 600px;
-    height: 250px;
-    height: max-content;
-    text-align: justify;
-}
-
-main .le-projet .bloc-projet-description div p {
-    margin-bottom: 15px;
-}
-
-main .le-projet div p span {
-    font-weight: 600;
-}
-
-#main-projet {
-    display: flex;
-    flex-direction: column;
-}
-
-#main-projet .bloc-img {
-    padding-left: 500px;
-    margin-top: 25px;
-    padding-bottom: 35px;
-}
-
-#main-projet .bloc-img img {
-    margin-bottom: 25px;
-    margin-right: 10px;
-    height: auto;
-    max-height: 90vh;
-    width: auto;
-    max-width: calc(85%);
-    object-fit: contain;
-    object-position: left;
-    /* box-shadow: 0 0 5px 3px rgba(30, 30, 30, .1); */
-}
-
-#back, #backBottom, #tri button {
-    cursor: pointer;
-    font-size: 1em;
-    font-family: 'PT Sans Narrow', Arial, Helvetica, sans-serif;
-    border: 1px solid #333333;
-    font-weight: 500;
-    background-color: #FFFFFF;
-    height: max-content;
-    width: max-content;
-    padding: 10px 15px;
-    border-radius: 2px;
-    margin-top: 8px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#back svg, #backBottom svg {
-    height: 16px;
-    margin-right: 5px;
-}
-
-#back:hover, #backBottom:hover {
-    box-shadow: 1px 1px black;
-}
-
-#back:active, #backBottom:active {
-    box-shadow: none;
-}
-
-/*-CONTACT--------------------------------------*/
-
-#contact {
-    height: max-content;
-    min-height: 100vh - 69px;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    padding-left: 300px;
-}
-
-#contact h2 {
-    display: block;
-    width: max-content;
-    margin: 22px 0;
-    font-size: 3em;
-}
-
-.bloc-info {
-    display: flex;
-    justify-content: space-between;
-    width: 85%;
-    padding-top: 35px;
-}
-
-.info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 300px;
-}
-
-.info section {
-    margin: 35px 0;
-    display: flex;
-    flex-direction: column;
-}
-
-iframe {
-    height: 400px;
-    width: 40vw;
-    min-width: 320px;
-    max-width: 800px;
-    border: 0;
-    margin-top: 30px;
-}
-
-.info section p {
-    margin-bottom: 8px;
-}
-
-.info h3 {
-    font-size: 1.5em;
-    margin-bottom: 20px;
-}
-
-.bloc-svg {
-    height: 25px;
-    display: flex;
-    align-items: center;
-    margin-top: 20px;
-}
-
-.info section .bloc-svg p {
-    line-height: 100%;
-    margin: 0px;
-}
-
-.bloc-svg svg {
-    height: 1.5em;
-    margin-right: 12px; 
-}
-
-.none {
-    display: none;
-    visibility: hidden;
-}
+} */
