--- a/css/style.css
+++ b/css/style.css
@@ -88,74 +88,32 @@
     }
 }
 
-/*-PROJET-SCROLL------------------------------------------*/
-
-/* #projets {
-    position: relative;
-    height: max-content;
+.description {
     display: flex;
     flex-direction: column;
-    min-height: 94vh;
-    height: auto;
-    width: 100%;
+    min-height: calc(100vh - 66px);
+    width: 90%;
     padding-left: 300px;
-    background-color: white;
 }
 
-#projets h2 {
+.description section {
+    min-height: 35vh;
+    max-height: min-content;
+    min-width: 310px;
+}
+
+.description section h2, .description section h1 {
     display: block;
     width: max-content;
     margin: 22px 0;
     font-size: 3em;
 }
 
-.bloc-projet {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    width: calc(97vw - 360px);
-    padding-bottom: 40px;
-
+.description section p {
+    display: block;
+    text-align: justify;
+    width: 95%;
+    line-height: 1.5em;
+    margin-bottom: 25px;
+    font-size: 1.1em;
 }
-
-.projet {
-    cursor: pointer;
-    position: relative;
-    overflow: hidden;
-    margin: 0 10px 12px 0;
-    border-radius: 5px;
-    height: 15vw;
-    min-height: 270px;
-    width: 24vw;
-    min-width: 450px;
-}
-
-.projet img {
-    object-fit: cover;
-    object-position: center;
-    height: 100%;
-    width: 100%;
-}
-
-.projet a {
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    background-color: rgba(30, 30, 30, .7);
-    color: white;
-    font-weight: 500;
-    font-size: 2.2em;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    opacity: 0;
-    padding: 0 12px;
-}
-
-.projet a:hover {
-    opacity: 1;
-} */
