--- a/css/nos-projets.css
+++ b/css/nos-projets.css
@@ -34,8 +34,7 @@
     overflow: hidden;
     margin: 0 10px 12px 0;
     border-radius: 5px;
-    max-height: 300px;
-    min-height: 270px;
+    height: 300px;
     width: 32%;
     min-width: 450px;
 }
