--- a/css/projet.css
+++ b/css/projet.css
@@ -1,4 +1,4 @@
-#tri {
+/* #tri {
     height: max-content;
     width: calc(97vw - 360px);
     margin-bottom: 40px;
@@ -32,17 +32,16 @@
 #tri button:active {
     background-color: #333333;
     color: white;
-}
+} */
 
 .le-projet {
     padding-left: 500px;
     padding-right: 50px;
-    width: max-content;
-    max-width: 100vw;
+    width: 100%;
 }
 
 main .le-projet h1 {
-    width: max-content;
+    width: auto;
     padding-top: 22px;
     margin-bottom: 22px;
     font-size: 3em;
@@ -56,7 +55,7 @@ main .le-projet .bloc-projet-description {
 }
 
 main .le-projet .bloc-projet-description .projet-info {
-    min-width: max-content;
+    width: auto;
     height: max-content;
     margin-right: 100px;
 }
