--- a/css/agence.css
+++ b/css/agence.css
@@ -3,7 +3,8 @@
     flex-direction: column;
     min-height: 100%;
     width: 85%;
-    padding-left: 300px;
+    margin: 0 auto;
+    padding-bottom: 35px;
 }
 
 .agence section {
@@ -22,7 +23,7 @@
 .agence section p {
     display: block;
     text-align: justify;
-    width: 95%;
+    width: 100%;
     line-height: 1.5em;
     margin-bottom: 25px;
     font-size: 1.1em;
@@ -30,7 +31,7 @@
 
 .agence .employees {
     height: auto;
-    width: 95%;
+    width: 100%;
     min-width: 480px;
     display: flex;
     /* justify-content: space-between; */
@@ -44,21 +45,25 @@
     padding: 20px;
     background-color: whitesmoke;
     overflow: hidden;
-    width: 220px;
-    min-width: 200px;
-    height: 350px;
+    /* width: 220px; */
+    width: 30%;
+    /* min-width: 200px; */
+    min-width: 358px;
+    /* height: 350px; */
+    height: 220px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     box-shadow: 0 0 5px 2px rgba(30, 30, 30, .1);
     margin: 0 25px 15px 0;
 }
 
 .profil img {
-    height: 60%;
+    height: 180px;
     width: auto;
     object-fit: cover;
     object-position: center;
+    margin-right: 15px;
     box-shadow: 0 0 5px 1px rgba(30, 30, 30, .1);
 }
 
