--- a/css/contact.css
+++ b/css/contact.css
@@ -1,10 +1,11 @@
 #contact {
-    height: max-content;
-    min-height: 100vh - 69px;
+    min-height: calc(100vh - 69px);
+    height: 100%;
     display: flex;
     flex-direction: column;
-    width: 100%;
-    padding-left: 300px;
+    width: 85%;
+    margin: 0 auto;
+    padding-bottom: 35px;
 }
 
 #contact h2 {
@@ -17,7 +18,7 @@
 .bloc-info {
     display: flex;
     justify-content: space-between;
-    width: 85%;
+    width: 100%;
     padding-top: 35px;
 }
 
