--- a/css/reset.css
+++ b/css/reset.css
@@ -203,9 +203,10 @@ header .reseaux a:hover {
 
 main {
     position: relative;
-    min-height: calc(100vh - 68px);
-    height: auto;
+    min-height: calc(100vh - 69px);
+    height: 100%;
     width: 100%;
+    padding-left: 252px;
 }
 
 /*-FOOTER--------------------------------------*/
