--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,9 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    width: calc(100% - 250px);
+    width: 100%;
     min-width: 320px;
     overflow-x: hidden;
-    margin-left: 250px;
 }
 
 .slider {
@@ -92,8 +91,8 @@
     display: flex;
     flex-direction: column;
     min-height: calc(100vh - 66px);
-    width: 90%;
-    padding-left: 300px;
+    width: 95%;
+    margin: 0 auto;
 }
 
 .description section {
