--- a/css/reset.css
+++ b/css/reset.css
@@ -302,3 +302,13 @@ footer div a {
     font-weight: 600;
     font-size: 15px;
 }
+
+.crux {
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    right: -100vw;
+    height: 100%;
+    width: 100vw;
+    background-color: rgba(30, 30, 30, .4);
+}
