--- a/css/responsive.css
+++ b/css/responsive.css
@@ -81,20 +81,175 @@
 }
 /*-TABLET-->>--SMARTPHONE------------------*/
 @media screen and (max-width: 768px) {
+    main {
+        padding-left: 0px;
+        padding-top: 70px;
+    }
+
+    footer {
+        padding: 0 20px;
+    }
+
     .projet {
         height: 200px;
         min-width: 250px;
     }
+
+    .btnMenuText {
+        display: none;
+        visibility: hidden;
+    }
+
+    .mobileMenu {
+        position: relative;
+        width: 100vw;
+        height: 70px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 5px;
+    }
+
+    .logo {
+        display: flex;
+        margin-left: 0px;
+        justify-content: center;
+        align-items: center;
+        height: 70px;
+        width: 70px;
+        margin: auto 0px auto 20px;
+    }
+
+    .logo img {
+        display: block;
+        object-fit: cover;
+        object-position: center;
+        width: 150px;
+    }
+
+    .btnMenu {
+        position: inherit;
+        top: 0;
+        background-color: transparent;
+        cursor: pointer;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 70px;
+        width: 70px;
+    }
+
+    header {
+        position: relative;
+        z-index: 1000;
+        position: fixed;
+        width: 100%;
+        height: 70px;
+        left: 0px;
+        overflow: hidden;
+        padding: 0 5px 25px 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        background-color: rgb(250, 250, 250);
+        box-shadow: 0px 2px 5px rgba(30, 30, 30, .2);
+        font-size: 1.05em;
+        font-weight: 400;
+        transition: 400ms;
+    }
+
+    .menu {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        height: max-content;
+        padding: 0;
+        margin: 0;
+    }
+
+    nav {
+        margin-top: 50px;
+    }
+
+    #projects a {
+        margin-bottom: 0px;
+    }
+
+    #projects a:hover {
+        font-size: 1em;
+    }
+
+    li, #projects {
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: max-content;
+        font-size: 1.5em;
+        font-weight: 600;
+        overflow: hidden;
+        width: 100%;
+        max-width: 100%;
+        height: 60px;
+        line-height: 30px;
+        margin: 15px 0px;
+        padding: 10px 0px;
+    }
+
+    li:hover {
+        font-size: 1.5em;
+    }
+
+    .bloc-projet {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .projet {
+        cursor: pointer;
+        position: relative;
+        overflow: hidden;
+        margin: 5px;
+        border-radius: 5px;
+    }
+
+    #unorderListText li {
+        display: flex;
+        justify-content: flex-start;
+        width: 90%;
+    }
 }
+
 @media screen and (max-width: 650px) {
     .projet {
         height: 260px;
         min-width: 300px;
         width: 100%;
     }
+
+    footer {
+        height: 210px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    footer div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 69px;
+        font-size: 1.2em;
+    }
+
+    .footerLinks {
+        height: 70px;
+    }
 }
-
-
 /*-SMARTPHONE-->>--TELEPHONE---------------*/
 @media screen and (max-width: 480px) {
     .projet {
@@ -102,11 +257,4 @@
         min-width: 300px;
         width: 100%;
     }
-
-
-
-
-
-
-
 }
