--- a/css/responsive.css
+++ b/css/responsive.css
@@ -218,9 +218,27 @@
     }
 
     #unorderListText li {
+        height: max-content;
         display: flex;
         justify-content: flex-start;
         width: 90%;
+        margin-left: 10px;
+    }
+
+    #contact h2 {
+        display: block;
+        width: max-content;
+        margin: 10px 0;
+        font-size: 3em;
+    }
+
+    .bloc-info {
+        padding-top: 0px;
+        flex-direction: column;
+    }
+
+    iframe {
+        width: 100%;
     }
 }
 
