--- a/css/responsive.css
+++ b/css/responsive.css
@@ -240,6 +240,17 @@
     iframe {
         width: 100%;
     }
+
+    .crux {
+        cursor: pointer;
+        position: absolute;
+        top: 0;
+        right: -100%;
+        height: 100%;
+        width: 100%;
+        background-color: rgba(30, 30, 30, .4);
+        transition: 150ms;
+    }
 }
 
 @media screen and (max-width: 650px) {
