--- a/css/reset.css
+++ b/css/reset.css
@@ -310,6 +310,6 @@ footer div a {
     right: -100vw;
     height: 100%;
     width: 100vw;
-    background-color: rgba(30, 30, 30, .4);
+    background-color: rgba(30, 30, 30, 0.4);
     transition: 150ms;
 }
