--- a/css/reset.css
+++ b/css/reset.css
@@ -39,6 +39,7 @@ body {
     scroll-snap-type: y mandatory;
     border-left: 1px solid rgba(30, 30, 30, .2);
     border-right: 1px solid rgba(30, 30, 30, .2);
+    cursor: inherit;
 }
 
 /*Scrollbar----------------------------------*/
@@ -113,6 +114,7 @@ header .reseaux {
 }
 
 nav {
+    cursor: pointer;
     margin-top: 100px;
 }
 
@@ -128,6 +130,10 @@ li {
     max-width: 100%;
     height: 30px;
     line-height: 30px;
+}
+
+.menu li a {
+    cursor: pointer;
 }
 
 li:hover {
