--- a/css/responsive.css
+++ b/css/responsive.css
@@ -184,6 +184,10 @@
         transition: 400ms;
     }
 
+    nav {
+        margin-top: 50px;
+    }
+
     .menu {
         display: flex;
         flex-direction: column;
@@ -194,8 +198,12 @@
         margin: 0;
     }
 
-    nav {
-        margin-top: 50px;
+    .menu li a {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        width: 100%;
     }
 
     #projects a {
