rectifications css responsive mobile

--- a/css/reset.css
+++ b/css/reset.css
@@ -313,9 +313,14 @@ footer div a {
     cursor: pointer;
     position: absolute;
     top: 0;
-    right: -100vw;
     height: 100%;
     width: 100vw;
     background-color: rgba(30, 30, 30, 0.4);
     transition: 150ms;
+    opacity: 0;
+}
+
+.none {
+    display: none;
+    visibility: hidden;
 }
