--- a/css/responsive.css
+++ b/css/responsive.css
@@ -180,6 +180,7 @@
         position: fixed;
         width: 100%;
         height: 70px;
+        min-height: max-content;
         left: 0px;
         overflow: hidden;
         padding: 0 5px 25px 0;
@@ -196,9 +197,11 @@
 
     nav {
         margin-top: 50px;
+        background-color: rgb(250, 250, 250);
     }
 
     .menu {
+        background-color: rgb(250, 250, 250);
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -208,8 +211,12 @@
         margin: 0;
     }
 
-    .menu li {
+    ul.menu {
+        background-color: rgb(250, 250, 250);
+    }
 
+    .menu:active {
+        background-color: rgb(250, 250, 250);
     }
 
     .menu li a {
@@ -220,9 +227,9 @@
         width: 100%;
     }
 
-    .menu li:active {
+    .menu li:active, .menu li a:active {
         background-color: #140B6E;
-        color: white;
+        color: white !important;
     }
 
     #projects a {
