--- a/css/projet.css
+++ b/css/projet.css
@@ -10,6 +10,7 @@ div .le-projet h1 {
 }
 
 div .le-projet .bloc-projet-description {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     font-size: 1.25em;
@@ -17,9 +18,14 @@ div .le-projet .bloc-projet-description {
 }
 
 div .le-projet .bloc-projet-description .projet-info {
-    width: auto;
     height: max-content;
-    margin-right: 100px;
+}
+
+div .le-projet .bloc-projet-description .projet-info .desc {
+    width: 100%;
+    height: max-content;
+    margin-top: 20px;
+    text-align: justify;
 }
 
 div .le-projet .bloc-projet-description .la-description {
@@ -64,6 +70,19 @@ div .le-projet div p span {
     object-fit: contain;
     object-position: center;
 }
+
+#main-projet .bloc-img video {
+    margin-bottom: 25px;
+    margin-right: 10px;
+    height: auto;
+    max-height: 90vh;
+    width: auto;
+    max-width: calc(100%);
+    object-fit: contain;
+    object-position: center;
+}
+
+
 
 #back, #backBottom, #tri button {
     cursor: pointer;
