--- a/css/responsive.css
+++ b/css/responsive.css
@@ -10,7 +10,6 @@
         width: 48%;
         min-width: 280px;
     }
-
 }
 
 @media screen and (min-width: 1024px) {
@@ -18,17 +17,8 @@
         opacity: 1;
     }
 }
-/*-PETIT-LAPTOP--GRANDE-TABLETTE-----------*/
+/*-PETIT-LAPTOP--SMARTPHONE-----------*/
 @media screen and (max-width: 1024px) {
-    header {
-        left: -168px;
-        overflow-x: hidden;
-    }
-
-    li {
-        margin-left: 84px;
-    }
-
     .logo {
         width: 84px;
         margin: 0 0 20px 143px;
@@ -89,34 +79,7 @@
         min-width: 310px;
     }
 
-    .profil {
-        margin: 0 5px 15px 0;
-    }
 
-    .projet a:active {
-        opacity: 1;
-    }
-}
-/*-TABLET-->>--SMARTPHONE------------------*/
-@media screen and (max-width: 857px) {
-
-    .profil {
-        padding: 10px;
-        overflow: hidden;
-        width: 100%;
-        min-width: 312px;
-        height: 210px;
-        margin: 0 0px 15px 0;
-    }
-
-    .profil img {
-        height: 170px;
-        margin-right: 15px;
-    }
-
-}
-
-@media screen and (max-width: 768px) {
     main {
         padding-left: 0px;
         padding-top: 70px;
@@ -344,6 +307,24 @@
 }
 
 @media screen and (max-width: 650px) {
+    .profil {
+        flex-direction: row;
+        align-items: center;
+        padding: 10px;
+        overflow: hidden;
+        width: 100%;
+        min-width: 312px;
+        height: 200px;
+        margin: 0 0 15px 0;
+    }
+
+    .profil img {
+        height: 180px;
+        width: 180px;
+        margin-right: 25px;
+    }
+
+
     .projet {
         height: 260px;
         min-width: 300px;
