--- a/css/agence.css
+++ b/css/agence.css
@@ -35,31 +35,32 @@
     min-width: 480px;
     display: flex;
     align-items: flex-start;
+    justify-content: space-between;
     flex-wrap: wrap;
     flex-shrink: 1;
     margin-bottom: 20px;
 }
 
 .profil {
-    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: whitesmoke;
     overflow: hidden;
-    width: 30%;
-    min-width: 358px;
-    height: 220px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+    width: 22%;
+    min-width: 240px;
+    max-width: 100%;
+    height: 400px;
     box-shadow: 0 0 5px 2px rgba(30, 30, 30, .1);
-    margin: 0 25px 15px 0;
+    padding: 25px;
+    margin: 10px 15px;
 }
 
 .profil img {
-    height: 180px;
-    width: auto;
+    height: 220px;
+    width: 220px;
     object-fit: cover;
     object-position: center;
-    margin-right: 15px;
     box-shadow: 0 0 5px 1px rgba(30, 30, 30, .1);
 }
 
