--- a/css/responsive.css
+++ b/css/responsive.css
@@ -19,18 +19,6 @@
 }
 /*-PETIT-LAPTOP--SMARTPHONE-----------*/
 @media screen and (max-width: 1024px) {
-    .logo {
-        width: 84px;
-        margin: 0 0 20px 143px;
-    }
-
-    header div .logo img {
-        display: block;
-        object-fit: cover;
-        object-position: center;
-        width: 60px;
-    }
-
     #projects {
         height: 30px;
     }
@@ -115,7 +103,7 @@
         justify-content: center;
         align-items: center;
         height: 70px;
-        width: 70px;
+        width: 120px;
         margin: auto 0px auto 20px;
     }
 
@@ -123,7 +111,7 @@
         display: block;
         object-fit: cover;
         object-position: center;
-        width: 150px;
+        width: 100%;
     }
 
     .btnMenu {
